docs(basic_examples): add docs

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,3 +3,8 @@
 name = "hello-rust"
 version = "0.0.1"
 authors = ["yszk0123 <y0suzuki0123@gmail.com>"]
+
+[[bin]]
+
+name = "hello-rust-bin"
+doc = false
